feat(app): updaetd format hooks
